syntax = "proto3";

// protoc --proto_path=src/main/java/com/ljh/gamedemo/proto/ --java_out=src/main/java src/main/java/com/ljh/gamedemo/proto/MsgPK.proto

import "Role.proto";
import "PK.proto";

option java_package = "com.ljh.gamedemo.proto.protoc";
option java_outer_classname = "MsgPKProto";

enum RequestType{
    PK = 0;                 // PK 挑战
    SPR = 1;                // 技能攻击玩家
    ESCAPE = 2;             // 退出挑战
    INVITE = 3;             // 挑战邀请
    AC = 4;                 // 接受挑战
    RESULT = 5;             // 挑战结果
}


message RequestPK{
    int64 userId = 1;
    int64 roleId = 2;
    int32 spellId = 3;

    RequestType type = 4;
}


message ResponsePK{
    int32 result = 1;
    string content = 2;
    RequestType type = 3;

    Role own = 4;
    Role opponent = 5;

    PKRecord record = 6;
}